[metadata]
name = track
description = Time tracking software

[options]
packages = find:

[flake8]
exclude = env,migrations

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
show_column_numbers = True
warn_unused_configs = True
new_semantic_analyzer = True

[mypy-*.migrations.*]
ignore_errors = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = track.settings
python_files = tests.py test_*.py
addopts = --verbose --ignore=env -r s
